@@ -1,3 +1,8 @@
+Mon Aug  6 02:22:38 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* src/lexgrog.l: groff requests aren't case-sensitive, so stop the
+	  preprocessor detection thinking they are.
+
 Mon Aug  6 01:26:26 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* lib/tempfile.c (create_tempfile): Use mode 0644 rather than mode
